--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
+
+
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,27 +16,73 @@
 :root {
     --cor1: #C5D97E;
     --cor2: #F2BE5C;
-    --cor3: #D9BB96;
+    --cor3: #d9bb9696;
     --cor4: #734B3D;
     --cor5: #F2F2F2;
     --cor6: #89878C;
 
-    --font1: ;
-    --font2: ;
+    --font1: "Sawarabi Mincho", serif;
+    --font2: "Old Standard TT", serif;
 
 
 }
 
 body, html {
     background-color: var(--cor3);
+    background-image: url(../imagens/foto1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
     background-color: var(--cor4);
+    margin: auto;
+    width: 720px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 main {
-    max-width: 460px;
+    max-width: 520px;
+    background-color: rgba(255, 255, 255, 0.678);
+    margin: auto;
+    padding: 12px;
+    box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.596);
+}
+
+main > section {
+    margin: 15px;
+    padding: 25px;
+    border: 3px solid rgba(0, 0, 0, 0.164);
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.418);
+    border-radius: 12px;
+}
+
+main > section > h2 {
+    color: var(--cor4);
+    text-align: right;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 3px #734b3d62;
+    font-family: var(--font2);
+    font-size: 2em;
+    font-weight: 800;
+}
+
+article {
+    background-color: var(--cor3);
+    max-width: 420px;
+    padding: 7px;
+    border-radius: 4.5px;
+    margin: auto;
+}
+
+p {
+    line-height: 25px;
+    text-align: justify;
+    text-indent: 8px;
+    padding: 12px;
+    font-family: var(--font1);
 }
 
 footer {
