Atualização imagem de fundo do site
Atualização imagem de fundo do site

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -33,7 +33,7 @@
 
 body, html {
     background-color: var(--cor3);
-    background-image: url(../imagens/foto1.jpg);
+    background-image: url(../imagens/foto1mod.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
