--- a/estilo/style.css
+++ b/estilo/style.css
@@ -65,6 +65,7 @@ header p {
     text-align: center;
     text-shadow: 4px 5px 7px rgba(0, 0, 0, 0.74);
     font-family: var(--font3);
+    line-height: 23px;
 }
 
 header p:hover {
@@ -127,11 +128,33 @@ main > section > h2 {
 }
 
 article {
-    background-color: var(--cor3);
-    max-width: 420px;
-    padding: 7px;
-    border-radius: 4.5px;
+    background-color: #89878c73;
+    width: 300px;
+    height: 320px;
     margin: auto;
+    padding: 12px;
+    box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    font-weight: bolder;
+    line-height: 36px;
+    text-align: justify;
+
+}
+
+article > h3 {
+    text-align: center;
+    background-image: linear-gradient(to right, #a52a2aa4), transparent;
+    margin: 0px -12px 0px -12px;
+    min-width: 300px;
+}
+
+section.box-image {
+    background-image: url(../imagens/foto3.jpg);
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    backdrop-filter: brightness(70%);
+    backdrop-filter: opacity(90%);
 }
 
 p {
