--- a/estilo/style.css
+++ b/estilo/style.css
@@ -155,6 +155,7 @@ section.box-image {
     background-attachment: fixed;
     backdrop-filter: brightness(70%);
     backdrop-filter: opacity(90%);
+    min-width: 300px;
 }
 
 p {
